--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,127 @@
 {
-  "extends": "next/core-web-vitals"
+	"env": {
+		"browser": true,
+		"es2021": true,
+		"jest": true
+	},
+	"extends": [
+		"eslint:recommended",
+		"plugin:react/recommended",
+		"airbnb-base",
+		"prettier"
+	],
+	"globals": {
+		"Atomics": "readonly",
+		"SharedArrayBuffer": "readonly"
+	},
+	"parserOptions": {
+		"ecmaFeatures": {
+			"jsx": true
+		},
+		"ecmaVersion": 12,
+		"sourceType": "module"
+	},
+	"plugins": ["react", "prettier", "module-resolver"],
+	"rules": {
+		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+		"prettier/prettier": [
+			"error",
+			{
+				"endOfLine": "auto"
+			}
+		],
+		"no-unused-vars": "off",
+		"arrow-body-style": "off",
+		"@typescript-eslint/no-unused-vars": ["error"],
+		"@typescript-eslint/no-non-null-assertion": "off",
+		"@typescript-eslint/no-inferrable-types": "off",
+		"default-param-last": "off",
+		"import/extensions": [
+			"error",
+			"ignorePackages",
+			{
+				"js": "never",
+				"jsx": "never",
+				"ts": "never",
+				"tsx": "never"
+			}
+		]
+	},
+	"settings": {
+		"import/resolver": {
+			"eslint-import-resolver-custom-alias": {
+				"alias": {
+					"@": "."
+				},
+				"extensions": [".js", ".jsx", ".ts", ".tsx"]
+			}
+		}
+	},
+	"overrides": [
+		{
+			"files": ["**/*.ts", "**/*.tsx"],
+			"extends": [
+				"eslint:recommended",
+				"plugin:@typescript-eslint/recommended",
+				"plugin:react/recommended",
+				"airbnb",
+				"plugin:@next/next/recommended",
+				"plugin:prettier/recommended"
+			],
+			"parser": "@typescript-eslint/parser",
+			"plugins": ["react", "prettier", "module-resolver", "@typescript-eslint"],
+			"rules": {
+				"react/jsx-filename-extension": [
+					1,
+					{ "extensions": [".js", ".jsx", ".ts", ".tsx", ".json"] }
+				],
+				"prettier/prettier": ["error"],
+				"import/extensions": [
+					"error",
+					"ignorePackages",
+					{
+						"js": "never",
+						"jsx": "never",
+						"ts": "never",
+						"tsx": "never"
+					}
+				],
+				"no-unused-vars": "off",
+				"@typescript-eslint/no-unused-vars": ["error"],
+				"@typescript-eslint/no-non-null-assertion": ["error"],
+				"@typescript-eslint/no-explicit-any": ["error"],
+				"no-shadow": "off",
+				"@typescript-eslint/no-shadow": ["error"],
+				"no-use-before-define": "off",
+				"@typescript-eslint/no-use-before-define": ["error"],
+				"import/prefer-default-export": "off",
+				"react/require-default-props": "off",
+				"@next/next/no-img-element": "off",
+				"no-restricted-imports": "off",
+				"@typescript-eslint/no-restricted-imports": [
+					"warn",
+					{
+						"name": "react-redux",
+						"importNames": ["useSelector", "useDispatch"],
+						"message": "Use typed hooks `useAppDispatch` and `useAppSelector` instead."
+					}
+				],
+				"import/no-extraneous-dependencies": [
+					"error",
+					{ "devDependencies": true }
+				],
+				"jsx-a11y/anchor-is-valid": "off",
+				"@typescript-eslint/no-empty-interface": [
+					"error",
+					{
+						"allowSingleExtends": true
+					}
+				],
+				"no-param-reassign": [
+					"error",
+					{ "props": true, "ignorePropertyModificationsFor": ["ref"] }
+				]
+			}
+		}
+	]
 }
